tests/failures/no_input.stderr
error: Auto_vec: Expected one or more arguments, Found None
 --> $DIR/no_input.rs:4:1
  |
4 | fn foo() -> usize {
  | ^^^^^^^^^^^^^^^^^
