tests/failures/no_input.rs
use auto_vec::auto_vec;

#[auto_vec]
fn foo() -> usize {
    return 5;
}

fn main() {}